# eflips-book

./: .gitignore  31_fixing_data_vehicle_types.ipynb  32_fixing_data_depots_to_simulate.ipynb  33_fixing_data_reduce_time.ipynb  40_eflips_opt.ipynb  40_eflips_opt.py  60_rotation_validation.ipynb  61_rotation_optimization.py  99_graph_problem.py  99_temp.ipynb  LICENSE-book.txt  README.md  book.toml  clear-database.sql  feasible_network.py  pyproject.toml
src/: 10_installing.md  20_import.md  21_vdv.md  22_bvgxml.md  24_viewing.md  25_editing.md  30_eflips_opt.md  30_simulating.md  31_fixing_data.md  32_eflips_opt.md  33_energy_consumption.md  40_sim_core.md  50_visualization.md  60_feasible_network.md  SUMMARY.md
src/media/: sankey.html  scenario_1_final_rotations.html
