[tool.poetry]
name = "eflips-book"
version = "0.1.0"
description = "Sample Scripts for the eFLIPS book"
authors = ["Ludger Heide <ludger.heide@tu-berlin.de>"]
license = "AGPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
eflips-depot = "^4.1.0"
eflips-ingest = "^1.2.4"
eflips-model = ">=5.0.0, <6.0.0"
eflips-eval = "^1.5.0"
jupyter = "^1.0.0"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
tqdm = "^4.66.4"
eflips-opt = {git = "git@github.com:mpm-tu-berlin/eflips-opt.git", branch = "main"}
kaleido = "0.2.1"
django-simba = { git = "git@github.com:rl-institut/django-simba.git", branch = "feature/djago-simba-as-package" }
black = {extras = ["jupyter"], version = "^24.4.2"}
fuzzywuzzy = "^0.18.0"
dash-cytoscape = "^1.0.2"
networkx = "^3.3"
exact-cover = "^1.4.0"
xcover = "^0.1.7"
graphviz = "^0.20.3"
pydot = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
